// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when "fastRefresh" is true, the fast refresh configuration is included 1`] = `
{
  "jsc": {
    "externalHelpers": true,
    "parser": {
      "syntax": "typescript",
      "tsx": true,
    },
    "target": "es2022",
    "transform": {
      "react": {
        "refresh": true,
        "runtime": "automatic",
        "useBuiltins": true,
      },
    },
  },
  "module": {
    "ignoreDynamic": true,
    "strict": true,
    "type": "es6",
  },
}
`;

exports[`when "parser" is "ecmascript", the configuration parser is ecmascript 1`] = `
{
  "jsc": {
    "externalHelpers": true,
    "parser": {
      "jsx": true,
      "syntax": "ecmascript",
    },
    "target": "es2022",
    "transform": {
      "react": {
        "refresh": true,
        "runtime": "automatic",
        "useBuiltins": true,
      },
    },
  },
  "module": {
    "ignoreDynamic": true,
    "strict": true,
    "type": "es6",
  },
}
`;
